Fix missing colors for labels

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -621,8 +621,8 @@ select {
 
 // Chips used for Resources selections and Policy Doc subjects
 @mixin common-chip-colors {
-    background: $main_button_color;
-    color: $white;
+    background: $main_button_background;
+    color: $main_button_color;
 }
 
 @mixin common-chip-styles {
